src/App.css
main {
  flex: 1;
  display: flex;
  justify-content: center;
}

header {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 2rem;
  border-bottom: var(--border-header);
}

header p {
  font-family: 'Righteous';
  font-size: 1.3rem;
  letter-spacing: 1px;
  text-transform: uppercase;
}

header button {
  background: none;
  padding: 0;
  margin-right: 3rem;
}

button {
  cursor: pointer;
  border: none;
  border-radius: 5px;
  cursor: pointer;
  transition: background-color 0.2s ease;
}

